-Update db connection string.

--- a/sample-miss-accountant/src/main/resources/application.properties
+++ b/sample-miss-accountant/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 #spring.datasource.password=root
 ###############################
 ### heroku connection string ###
-spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?reconnect=true&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=be97c1b8a52661
 spring.datasource.password=129e9e28
 ################################
