--- a/build.gradle
+++ b/build.gradle
@@ -158,7 +158,7 @@ subprojects {
         version = '1.18.12'
     }
 
-    if (!project.name.startsWith('sample-') && !project.name.startsWith('test-')) {
+    if (!project.name.startsWith('miss-') && !project.name.startsWith('test-')) {
         task delombok(type: io.franzbecker.gradle.lombok.task.DelombokTask, dependsOn: compileJava) {
             ext.outputDir = file("$buildDir/delombok")
             outputs.dir(outputDir)
