--- a/miss-accountant/src/main/resources/application.properties
+++ b/miss-accountant/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 ### local connection string ###
-spring.datasource.url=jdbc:mysql://localhost/miss_accountant?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost/miss_accountant?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=root
 ###############################
 ### heroku connection string ###
-#spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?reconnect=true&useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username=be97c1b8a52661
-#spring.datasource.password=129e9e28
+spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?reconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=be97c1b8a52661
+spring.datasource.password=129e9e28
 ################################
