--- a/miss-accountant/build.gradle
+++ b/miss-accountant/build.gradle
@@ -16,11 +16,18 @@
 
 apply plugin: 'org.springframework.boot'
 
+
 dependencies {
     implementation project(':line-bot-spring-boot')
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    compile 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java:5.1.49'
     implementation 'com.google.guava:guava'
+}
+
+bootRun{
+    sourceResources sourceSets.main
 }
