--- a/miss-accountant/src/main/resources/application.properties
+++ b/miss-accountant/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
 ### local connection string ###
-#spring.datasource.url=jdbc:mysql://localhost/miss_accountant?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost/miss_accountant?useSSL=false&serverTimezone=UTC&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
 ###############################
 ### heroku connection string ###
-spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?reconnect=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=be97c1b8a52661
-spring.datasource.password=129e9e28
+#spring.datasource.url=jdbc:mysql://us-cdbr-east-02.cleardb.com/heroku_9a6ff71a2ce89bc?reconnect=true&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=be97c1b8a52661
+#spring.datasource.password=129e9e28
 ################################
