--- a/miss-accountant/build.gradle
+++ b/miss-accountant/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 //    compile 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java:5.1.49'
     implementation 'com.google.guava:guava'
+
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+//    implementation 'com.baomidou:mybatis-plus:3.5.3.1'
 }
 
 bootRun{
