--- a/miss-accountant/src/main/resources/application.properties
+++ b/miss-accountant/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 ### local connection string ###
 spring.jpa.database=mysql
