--- a/miss-accountant/build.gradle
+++ b/miss-accountant/build.gradle
@@ -22,14 +22,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-//    compile 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'mysql:mysql-connector-java:5.1.49'
-    implementation 'com.google.guava:guava'
-
-//    implementation 'junit:junit:4.13.1'
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
+    implementation 'com.github.xiaoymin:knife4j-spring-boot-starter:2.0.7'
+    implementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+    implementation 'com.google.guava:guava'
+
+    runtimeOnly 'mysql:mysql-connector-java:5.1.49'
+
+//    implementation 'junit:junit:4.13.1'
+//    compile 'org.springframework.boot:spring-boot-devtools'
 }
 
 bootRun{
